test(api): add tags to separate create, get, update and delete test executions